# AT-Terminal

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release-certification.yml  release.yml
AT-modules/: module_config.json
AT-modules/base/: metadata.json
docs/: module-authoring-guide.md  module-metadata-reference.md  panel-popup-protocol.md  panel-toolbar-protocol.md  release-readiness-v0.1.0.md
scripts/: generate-icon-manifest.mjs  prepare-tauri-bundle.mjs  tauri-cargo-runner.sh
src/: App.tsx  index.css  main.rs  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: file_watcher.rs  main.rs
src-tauri/src/commands/: browser.rs  detached_tabs.rs  filesystem.rs  git.rs  mod.rs  modules.rs  sessions.rs  terminal_blocks.rs  workspace_roots.rs
src/components/: ConfirmDialog.tsx  CustomizeTabDialog.tsx  DetachedTabWindowApp.tsx  ErrorBoundary.tsx  FileExplorer.tsx  FileExplorerContextMenu.tsx  FileExplorerHeader.tsx  FileExplorerInlineNameInput.tsx  FileTreeRow.tsx  FooterBar.tsx  GitAuthDialog.tsx  GitPanel.tsx  HeaderBar.tsx  MatchHighlight.tsx  ModulePanelPopupLayer.tsx  ModuleToolbarIcon.tsx  NewTabDialog.tsx  PanelBar.tsx  PanelContextMenu.tsx  PanelWorkspace.tsx  RenameItemDialog.tsx  SessionContent.tsx  SidePanel.tsx  (+8 more)
(+70 files in other folders)
